k8s/fe-deployment.yaml
safayavatsalapiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: "safayavatsal/simple_mearn_micro_fe:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
